# src/modules/orderManagment/order.validation.ts
@@ -9,3 +9,8 @@ export const PlaceOrderSchema = z.object({
 export const GetOrderSchema = z.object({
   orderId: z.number().min(1),
 });
+
+export const UpdateOrderStatusSchema = z.object({
+  orderId: z.number().min(1),
+  action: z.enum(['confirm', 'process', 'pickup', 'out_for_delivery', 'deliver', 'cancel', 'refund']),
+});
